Ref #4393: Groovy DSL - Get rid of --report-unsupported-elements-at-runtime (#4589)
## Motivation

The flag `--report-unsupported-elements-at-runtime` can be needed in specific use cases to prevent errors during a native compilation, the goal is to see how it can be avoided.

## Modifications:

I could not reproduce the problem with the latest versions of Graal VM / Quarkus / Camel Quarkus so this PR simply adds new integration tests to ensure that the problem won't appear anymore.

* Add more integration tests to cover the use cases that used to fail
* Align the code of the integration tests and their dependencies with the integration tests of other DSLs
* Adapt the code of the processor to Java 17
* Remove the limitation from the documentation